tests/output/self_hosted/missing_case_error.txt
tests/missing_case_error.oomph:2: error: types not handled in switch: Str

    switch (1 as Int | Str):
    ^^^^^^

